# verdia

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  render.yaml
.github/workflows/: ci.yml
apps/web/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json
apps/web/src/: proxy.ts
docs/: DEPLOY.md
docs/adr/: 0001-hybrid-cv-pipeline.md  0002-datasets-and-class-definition.md  0003-application-stack.md  0004-fully-live-deployment.md  0005-nova-captura-browser-ingest.md  0006-colab-train-cpu-infer.md  0007-pr-ci-and-post-ci-bugbot.md  0007-pr-ci-gate.md
docs/agents/: ci.md
docs/research/: 2026-07-20-hobby-ml-host-free-tiers.md
scripts/ci/: check-file-size.mjs  check-file-size.test.mjs  check_python_function_size.py  test_check_python_function_size.py
services/ml/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/ml/data/: README.md  eval_metrics.json  thresholds.json
services/ml/data/fixtures/: dnit_validation.jsonl  training_eval.jsonl
services/ml/scripts/: calibrate_thresholds.py  derive_labels.py  evaluate_dnit.py  prepare_datasets.py
services/ml/src/verdia_ml/: __init__.py  __main__.py  app.py  classificador.py  eval.py  image_ops.py  labels.py  pipeline.py  segmentacao.py
services/ml/tests/: test_classificador.py  test_cobertura_labels.py  test_eval.py  test_health.py  test_infer.py  test_infer_auth.py  test_pipeline.py  test_sample_fixtures.py  test_segmentacao.py
supabase/migrations/: 20260720120000_capturas_trechos.sql  20260720140000_capturas_inference_error.sql  20260720160000_capturas_overlay.sql  (+1 more)
(+37 files in other folders)
