[project]
name = "verdia-ml"
version = "0.1.0"
description = "verdia Inference API (segmentação + classificador ordinal)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verdia_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
